<resources>
    <string name="app_name">Malaga Turistica</string>

    <string name="title_activity_menu_lateral">MenuLateralActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Cabezera submenu -->
    <string name="ml_cabezera">Malaga turistica</string>

    <!-- menu lateral -->
    <string name="ml_inicio">Inicio</string>
    <string name="ml_event">Eventos</string>
    <string name="ml_cultura">Cultura</string>
    <string name="ml_ocio">Ocio</string>
    <string name="ml_gastronomia">Gastronomia</string>
    <string name="ml_alojamiento">Alojamiento</string>
    <string name="ml_pInfo">Puntos de informacion</string>
    <string name="ml_compras">Compras</string>
    <string name="ml_cSol">Costa del sol</string>
    <string name="ml_map">Mapa</string>

    <!-- Boton flotante -->
    <string name="title_activity_maps">Map</string>

    <!-- Submenu -->
    <string name="action_ajustes">Ajustes</string>
    <string name="action_valorar">Valorar</string>
    <string name="action_contacto">Contacto</string>

    <string name="idioma">Idioma</string>
    <string name="texto_ultimos_eventos">Últimos Eventos</string>
    <string name="texto_boton_ver_hotel">Ver Alojamiento</string>
    <string name="texto">Motivo</string>
    <string name="btn">Enviar</string>
    <string name="gmail">Direccion de correo</string>
    <string name="mensaje">Mensaje</string>

    <!-- recomendaciones -->
    <string name="info">
        Lávese las manos frecuentemente.\n
        Mantenga el distanciamiento social.\n
        Evite tocarse los ojos, la nariz y la boca.\n
        Si tiene fiebre, tos y dificultad para respirar, solicite atención médica a tiempo.
    </string>
    <string name="salir">Salir</string>
    <string name="titulo">Recomendaciones Covid-19</string>
    <string name="nombre_ciudad_malaga" translatable="false">Ciudad de Málaga</string>
    <string name="texto_velezmalaga" translatable="false">Vélez Málaga</string>
    <string name="texto_nerja" translatable="false">Nerja</string>
    <string name="texto_rinconVictoria" translatable="false">Rincón De La Victoria</string>
    <string name="texto_torremolinos" translatable="false">Torremolinos</string>
    <string name="texto_benalmadena" translatable="false">Benalmádena</string>
    <string name="texto_fuengirola" translatable="false">Fuengirola</string>
    <string name="texto_mijas" translatable="false">Mijas</string>
    <string name="texto_marbella" translatable="false">Marbella</string>
    <string name="texto_lugar_interes_costa_sol_ciudad" translatable="true">Lugares de Interés</string>

</resources>
