<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/principal">

    <!-- Fragment del menu lateral -->

    <fragment
        android:id="@+id/principal"
        android:name="com.example.turismomalagaapp.ui.principal.PrincipalFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_principal"/>

    <fragment
        android:id="@+id/nav_event"
        android:name="com.example.turismomalagaapp.ui.event.EventFragment"
        android:label="@string/ml_event"
        tools:layout="@layout/fragment_event"/>

    <fragment
        android:id="@+id/nav_ocio"
        android:name="com.example.turismomalagaapp.ui.ocio.OcioFragment"
        android:label="@string/ml_ocio"
        tools:layout="@layout/fragment_ocio"/>

    <fragment
        android:id="@+id/nav_gastronomia"
        android:name="com.example.turismomalagaapp.ui.gastronomia.GastronomiaFragment"
        android:label="@string/ml_gastronomia"
        tools:layout="@layout/fragment_gastronomia"/>


    <fragment
        android:id="@+id/nav_cultura"
        android:name="com.example.turismomalagaapp.ui.cultura.CulturaFragment"
        android:label="@string/ml_cultura"
        tools:layout="@layout/fragment_cultura"/>

    <fragment
        android:id="@+id/nav_alojamiento"
        android:name="com.example.turismomalagaapp.ui.alojamientos.AlojamientoFragment"
        android:label="@string/ml_alojamiento"
        tools:layout="@layout/fragment_alojamiento"/>

    <fragment
        android:id="@+id/nav_pInfo"
        android:name="com.example.turismomalagaapp.ui.puntosInformacion.PuntosInfoFragment"
        android:label="@string/ml_pInfo"
        tools:layout="@layout/fragment_puntos_info"/>

    <fragment
        android:id="@+id/nav_compras"
        android:name="com.example.turismomalagaapp.ui.compras.ComprasFragment"
        android:label="@string/ml_compras"
        tools:layout="@layout/fragment_compras"/>

    <fragment
        android:id="@+id/nav_cSol"
        android:name="com.example.turismomalagaapp.ui.costaSol.CostaSolFragment"
        android:label="@string/ml_cSol"
        tools:layout="@layout/fragment_costa_sol"/>

    <!-- fragment del mapa -->

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.turismomalagaapp.ui.map.MapFragment"
        android:label="@string/title_activity_maps"
        tools:layout="@layout/fragment_map"/>

    <!-- fragment del submenu -->
    <fragment
        android:id="@+id/action_ajustes"
        android:name="com.example.turismomalagaapp.ui.Submenu.AjustesFragment"
        android:label="@string/action_ajustes"
        tools:layout="@layout/fragment_ajustes"/>

    <fragment
        android:id="@+id/action_valorar"
        android:name="com.example.turismomalagaapp.ui.Submenu.ValorarFragment"
        android:label="@string/action_valorar"
        tools:layout="@layout/fragment_valorar"/>
    <fragment
        android:id="@+id/action_contacto"
        android:name="com.example.turismomalagaapp.ui.Submenu.ContactoFragment"
        android:label="@string/action_contacto"
        tools:layout="@layout/fragment_contacto"/>

</navigation>